--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>AuthRbca</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>AuthRbca</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <script
+      src="https://kit.fontawesome.com/bde5eef7e2.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
+
+<!-- // https://tmohentai.com/reader/67b3cfa0501c1/cascade?image-width=normal-width
+//
+https://tmohentai.com/section/hentai?search[searchText]=Gin%20Eiji&search[searchBy]=artist&exact=1
+// https://tmohentai.com/reader/67b89bae2a9cc/cascade?image-width=normal-width
+//https://tmohentai.com/?page=40-->
+<!-- https://tmohentai.com/section/all?search[searchText]=Tarobaumu&search[searchBy]=artist&exact=1 -->
+<!-- https://tmohentai.com/section/hentai?search[searchText]=Freehand%20Tamashii&search[searchBy]=artist&exact=1 -->
+<!-- https://www.manhwas.net/biblioteca?genero=harem&page=16 -->
+<!-- https://zonatmo.com/groups/26745/dragon-translation/proyects -->
+<!-- https://www.manhwas.net/leer/adiccion-a-mama-79.00 -->
+<!-- https://zonatmo.com/library?genders%5B0%5D=6&_pg=1&page=18 -->
